--- a/CoolBlue/Accounts.xaml
+++ b/CoolBlue/Accounts.xaml
@@ -22,7 +22,7 @@
         <CollectionViewSource x:Key="uSP_getAllAccountTypesUSP_getAllAccountsViewSource" Source="{Binding FK_USP_getAllAccountTypes_USP_getAllAccounts, Source={StaticResource uSP_getAllAccountTypesViewSource}}"/>
     </dx:ThemedWindow.Resources>
 
-    <dxlc:ScrollBox HorizontalAlignment="Left"  Grid.Row="0" Grid.RowSpan="100" Grid.ColumnSpan="100" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="0" Padding="0" DragScrolling="False" Background="{x:Null}" Width="800" Height="600" >
+    <dxlc:ScrollBox HorizontalAlignment="Left"  Grid.Row="0" Grid.RowSpan="11" Grid.ColumnSpan="7" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="0" Padding="0" DragScrolling="False" Background="{x:Null}" >
 
         <Grid  IsEnabled="True" Margin="0,0" Background="#FF093472" ScrollViewer.HorizontalScrollBarVisibility="Visible" Width="800" Height="600">
             <Grid.ColumnDefinitions>
@@ -199,7 +199,7 @@
 
             <dxg:GridColumn Binding="{Binding cDesc}"  FieldName="Description" Header="Description" Width="100"/>
             <dxg:GridColumn Binding="{Binding cNote}"  FieldName="Note" Header="Note" Width="160"/>
-            <dxg:GridColumn Binding="{Binding cCurrency}"  FieldName="cCurrency" Header="Currency" Width="100"/>
+                <dxg:GridColumn Binding="{Binding currencyName}"  FieldName="currencyName" Header="Currency" Width="100"/>
 
         </dxg:GridControl>
         </Grid>
