--- a/CoolBlue/editAccount.xaml
+++ b/CoolBlue/editAccount.xaml
@@ -14,8 +14,8 @@
     xmlns:local="clr-namespace:coolBlue"
     
     x:Class="coolBlue.editAccount"
-    Title="Account" Height="720" Width="800"
-    Loaded="ThemedWindow_Loaded" WindowStartupLocation="CenterScreen" ShowStatusPanel="True" ShowBackButton="True"
+    Title="Account" Height="754" Width="870"
+    Loaded="ThemedWindow_Loaded" WindowStartupLocation="CenterScreen" ShowStatusPanel="True" ShowBackButton="True" ResizeBorderThickness="5,5,9,5" BorderThickness="0"
     >
     <dx:ThemedWindow.Resources>
         <local:AccountsDataSet x:Key="accountsDataSet"/>
@@ -28,7 +28,7 @@
     </dx:ThemedWindow.Resources>
     <dxlc:ScrollBox HorizontalAlignment="Left"  Grid.Row="0" Grid.RowSpan="11" Grid.ColumnSpan="7" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="0" Padding="0" DragScrolling="False" Background="{x:Null}" >
 
-        <Grid  IsEnabled="True" Margin="0,0" Background="#FF093472" ScrollViewer.HorizontalScrollBarVisibility="Visible" Width="800" Height="690">
+        <Grid  IsEnabled="True" Margin="0,0" Background="#FF093472" ScrollViewer.HorizontalScrollBarVisibility="Visible" Width="836" Height="700" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Name = "c0"  Width="100"/>
                 <ColumnDefinition Name = "c1" Width="100"/>
@@ -50,8 +50,8 @@
 
                 <RowDefinition Name="r3" Height="120" MinHeight="0"/>
                 <RowDefinition Name="r4" Height="110" MinHeight="0"/>
-                <RowDefinition Name="r5" Height="120" MinHeight="0"/>
-                <RowDefinition Name="r6" Height="40" MinHeight="0"/>
+                <RowDefinition Name="r5" Height="150" MinHeight="0"/>
+                <RowDefinition Name="r6" Height="28" MinHeight="0"/>
 
             </Grid.RowDefinitions>
 
@@ -65,13 +65,13 @@
                 </dxr:RibbonDefaultPageCategory>
             </dxr:RibbonControl>
 
-            <dxr:RibbonStatusBarControl Height="26" VerticalAlignment="Stretch" Grid.Row="6" Grid.ColumnSpan="11" Foreground="#FF405FB2"  Background="#FF405FB2" >
+            <dxr:RibbonStatusBarControl Height="26" VerticalAlignment="Bottom" Grid.Row="6" Grid.ColumnSpan="11" Foreground="#FF405FB2"  Background="#FF405FB2" >
                 <dxr:RibbonStatusBarControl.RightItems>
                     <dxb:BarButtonItem x:Name="printItem" Content="Print" Glyph="{dx:DXImage Image=Print_16x16.png}"/>
                 </dxr:RibbonStatusBarControl.RightItems>
             </dxr:RibbonStatusBarControl>
 
-            <dx:DXTabControl Grid.RowSpan="4" Grid.ColumnSpan="9" Width="800" Grid.Row="2" Margin="0">
+            <dx:DXTabControl Grid.RowSpan="4" Grid.Row="2" Margin="0" VerticalAlignment="Top" Grid.ColumnSpan="9">
                 <dx:DXTabItem Header="Basic" Height="22" VerticalAlignment="Top">
                     <Grid Background="Transparent" DataContext="{StaticResource uSP_getOneAccountViewSource}" Margin="0,-1,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
                         <!--<Grid x:Name="grid1" Margin="3"  Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top">-->
