--- a/CoolBlue/categories.xaml
+++ b/CoolBlue/categories.xaml
@@ -1,9 +1,12 @@
 ﻿<dx:ThemedWindow
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
     xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
     xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+    
     xmlns:local="clr-namespace:coolBlue"
     x:Class="coolBlue.categories"
     Title="Categories" Height="800" Width="1000" WindowStartupLocation="CenterScreen"
@@ -36,20 +39,65 @@
             </dxr:RibbonDefaultPageCategory>
         </dxr:RibbonControl>
         <dxr:RibbonStatusBarControl DockPanel.Dock="Bottom"/>
-        <DataGrid x:Name="uSP_getAllCatsDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="0,20,0,0" RowDetailsVisibilityMode="VisibleWhenSelected" Height="500" Width="500" IsReadOnly="True" VerticalAlignment="Top">
-            <DataGrid.Columns>
-                <DataGridTextColumn x:Name="iDColumn" Binding="{Binding ID}" Header="ID" IsReadOnly="True" Width="SizeToHeader" Visibility="Hidden"/>
-                <DataGridTemplateColumn x:Name="dtCreateDateColumn" Header="dt Create Date" Width="SizeToHeader" Visibility="Hidden">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <DatePicker SelectedDate="{Binding dtCreateDate, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTextColumn x:Name="cNameColumn" Binding="{Binding cName}" Header="Category" Width="200" FontWeight="Bold"/>
-                <DataGridTextColumn x:Name="cNoteColumn" Binding="{Binding cNote}" Header="Note" Width="200"/>
-            </DataGrid.Columns>
-        </DataGrid>
+        <dxg:GridControl Name="uSP_getAllCatsDataGrid" AutoGenerateColumns="None"  EnableSmartColumnsGeneration="False" 
+                         ItemsSource="{Binding Source={StaticResource uSP_getAllCatsViewSource}}" 
+                         Margin="0"  SelectionMode="Row">
+            <dxg:GridControl.View>
+                <dxg:TableView AllowPerPixelScrolling="True" VerticalScrollbarVisibility="Auto" 
+                               ShowColumnHeaders ="True"  Grid.ColumnSpan="1" Margin="10,0"  
+                               ShowBandsPanel="False" ShowBandsInCustomizationForm="False" 
+                               ShowCheckBoxSelectorInGroupRow="False" ShowDragDropHint="False" ShowEditFormOnDoubleClick="False" 
+                               ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False" ShowEditFormUpdateCancelButtons="False" 
+                               ShowGroupPanel="False" ShowHorizontalLines="False" ShowIndicator="False" ShowSearchPanelCloseButton="False" 
+                               ShowValidationAttributeErrors="False" ShowVerticalLines="False"
+                               AllowEditing="False">
+
+                    <dxg:TableView.FormatConditions>
+                        <dxg:FormatCondition Expression="[Id] % 2 == 0" FieldName="Id">
+                            <dx:Format Foreground="Red" Background="Yellow" FontWeight="Bold"/>
+                        </dxg:FormatCondition>
+                    </dxg:TableView.FormatConditions>
+                    <dxg:TableView.RowStyle>
+                        <Style TargetType="{x:Type dxg:RowControl}">
+                            <Style.Triggers>
+
+
+                                <Trigger Property="dxg:GridViewBase.IsFocusedRow" Value="True">
+                                    <Setter Property="Background" Value="Green" />
+                                    <Setter Property="Foreground" Value="White" />
+                                </Trigger>
+
+                            </Style.Triggers>
+                        </Style>
+                    </dxg:TableView.RowStyle>
+
+                    <dxg:TableView.CellStyle>
+                        <Style TargetType="{x:Type dxg:LightweightCellEditor }">
+                            <Style.Triggers>
+
+
+                                <Trigger Property="dxg:GridViewBase.IsFocusedRow" Value="True">
+                                    <Setter Property="Background" Value="Green" />
+                                    <Setter Property="Foreground" Value="White" />
+                                </Trigger>
+
+                            </Style.Triggers>
+                        </Style>
+                    </dxg:TableView.CellStyle>
+                </dxg:TableView>
+            </dxg:GridControl.View>
+
+            <dxg:GridColumn Binding="{Binding cName}"   Header="Name" Width="160" EditFormVisible="False">
+                <dxg:GridColumn.DisplayTemplate  >
+                    <ControlTemplate >
+                        <TextBlock  x:Name="PART_Editor" FontWeight="Bold" />
+                    </ControlTemplate>
+                </dxg:GridColumn.DisplayTemplate>
+            </dxg:GridColumn>
+
+            <dxg:GridColumn x:Name="cNote" Binding="{Binding cNote}" Header="Note" Width="280"/>
+            
+        </dxg:GridControl>
         <!--<DataGrid x:Name="uSP_getAllSubCatsDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding Source={StaticResource uSP_getAllCatsUSP_getAllSubCatsViewSource}}" Margin="0,120,0,0" RowDetailsVisibilityMode="VisibleWhenSelected" Width="400" Height="400" IsReadOnly="True" VerticalAlignment="Top">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="cNameColumn1" Binding="{Binding cName}" Header="Sub Category" Width="200"/>
